--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AmdGram"
         tools:targetApi="31">
+
+        <activity
+            android:name=".Activities.SignUpActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:exported="true" />
+
+        <activity
+            android:name=".Activities.SignInActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true"/>
     </application>
 
 </manifest>
