--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -46,4 +47,14 @@ dependencies {
 
     //Round image
     implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    //firebase connection
+    implementation platform('com.google.firebase:firebase-bom:31.2.1')
+    implementation 'com.google.firebase:firebase-analytics'
+
+    // firebase firestore
+    implementation 'com.google.firebase:firebase-firestore:24.4.3'
+
+    //firebase messaging
+    implementation 'com.google.firebase:firebase-messaging:23.1.1'
 }
