--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        google()  // Google's Maven repository\
+        mavenCentral()  // Maven Central repository
+    }
+
+    dependencies {
+        //dependency for the Google services Gradle plugin
+        classpath 'com.google.gms:google-services:4.3.15'
+
+    }
+}
+
 plugins {
     id 'com.android.application' version '8.1.0-alpha04' apply false
     id 'com.android.library' version '8.1.0-alpha04' apply false
