--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.2.1')
     implementation 'com.google.firebase:firebase-analytics'
 
-    // firebase firestore
+    // Firebase FireStore
     implementation 'com.google.firebase:firebase-firestore:24.4.3'
 
     //firebase messaging
