--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -57,4 +57,7 @@ dependencies {
 
     //firebase messaging
     implementation 'com.google.firebase:firebase-messaging:23.1.1'
+
+    //MultiDex
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
